# wz-map-editor

./: CMakeLists.txt  INSTALL  README  README.BUILD.MAC.txt  TODO  WZMapEdit.pro  WZMapEditor.pro
Resources/: WZMapEditor-Info.plist
WZMapEditor.xcodeproj/: project.pbxproj
configs/: Project-All.xcconfig  WZMapEditor-All.xcconfig  WZMapEditor-Debug.xcconfig  WZMapEditor-Release.xcconfig
configs/rulescripts/: qrc.sh  ui.sh
doc/: AUTHORS  README  TILESET  TODO
src/: ActionManager.cpp  ActionManager.h  ActionsManager.cpp  ActionsManager.h  DockWidget.cpp  DockWidget.h  FileSystemCompleterModel.cpp  FileSystemCompleterModel.h  MainWindow.cpp  MainWindow.h  Map.cpp  Map.h  Map2DViewWidget.cpp  Map2DViewWidget.h  Map3DViewWidget.cpp  Map3DViewWidget.h  MapEditorWidget.cpp  MapEditorWidget.h  MapInformation.cpp  MapInformation.h  MapParser.cpp  MapParser.h  MapSettingsManager.cpp  MapSettingsManager.h  MapWriter.cpp  MapWriter.h  PreferencesManager.cpp  PreferencesManager.h  SettingManager.cpp  SettingManager.h  SettingsManager.cpp  SettingsManager.h  ShortcutEditorDelegate.cpp  ShortcutEditorDelegate.h  ShortcutEditorWidget.cpp  ShortcutEditorWidget.h  ShortcutManager.cpp  ShortcutManager.h  ShortcutsManager.cpp  ShortcutsManager.h  (+9 more)
src/resources/: resources.qrc
src/ui/: InformationDockWidget.ui  LandDockWidget.ui  MainWindow.ui  Map2DEditorWidget.ui  Map3DEditorWidget.ui  MapSettingsDialog.ui  ObjectsDockWidget.ui  PreferencesDialog.ui  ShortcutEditorDialog.ui  TerrainDockWidget.ui  TilesetDockWidget.ui  ToolBarEditorDialog.ui  TriangleDockWidget.ui
(+5 files in other folders)
